# libfprint

./: .gitignore  .gitlab-ci.yml  AUTHORS  COPYING  ChangeLog  HACKING  HACKING.md  INSTALL  Makefile.am  NEWS  README  README.md  THANKS  TODO  autogen.sh  configure.ac  meson.build  meson_options.txt
demo/: gtk-libfprint-test.c  gtk-libfprint-test.gresource.xml  gtk-libfprint-test.ui  loop.c  loop.h  meson.build  org.freedesktop.libfprint.Demo.appdata.xml  org.freedesktop.libfprint.Demo.desktop  org.freedesktop.libfprint.Demo.json
doc/: Makefile.am  advanced-topics.xml  doxygen.cfg  doxygen.cfg.in  getting-started.xml  intro.xml  libfprint-docs.xml  libfprint-sections.txt  meson.build
doc/xml/: meson.build
examples/: Makefile.am  enroll.c  img_capture.c  img_capture_continuous.c  meson.build  verify.c  verify_live.c
libfprint/: Makefile.am  aeslib.c  aeslib.h  assembling.c  assembling.h  async.c  core.c  data.c  drivers_api.h  drv.c  fp_internal.h  fpi-assembling.c  fpi-assembling.h  fpi-async.c  fpi-async.h  fpi-core.c  fpi-core.h  fpi-data.c  fpi-data.h  fpi-dev-img.c  fpi-dev-img.h  fpi-dev.c  fpi-dev.h  fpi-img-pixman.c  fpi-img.c  fpi-img.h  fpi-log.h  fpi-poll.c  fpi-poll.h  fpi-ssm.c  fpi-ssm.h  fpi-sync.c  fpi-usb.c  fpi-usb.h  fprint-list-hal-info.c  fprint-list-supported-devices.c  fprint-list-udev-rules.c  fprint.h  gdkpixbuf.c  imagemagick.c  (+6 more)
libfprint/drivers/: aes1610.c  aes1660.c  aes2501.c  aes2501.h  aes2550.c  aes2660.c  aes3500.c  aes3k.c  aes4000.c  aeslib.c  aesx660.c  aesx660.h  driver_ids.h  elan.c  elan.h  etes603.c  fdu2000.c  upek_proto.c  upek_proto.h  upeke2.c  upeksonly.c  upeksonly.h  upektc.c  upektc.h  upektc_img.c  upekts.c  uru4000.c  vcom5s.c  vfs0050.c  vfs101.c  vfs301.c  vfs301_proto.c  vfs5011.c
libfprint/nbis/: lfs.h.patch  remove-function.lua  update-from-nbis.sh
libfprint/nbis/bozorth3/: bozorth3.c  bz_alloc.c  bz_drvrs.c  bz_gbls.c  bz_io.c  bz_sort.c
libfprint/nbis/include/: bozorth.h  defs.h  lfs.h  log.h  morph.h  mytime.h  sunrast.h
libfprint/nbis/mindtct/: binar.c  block.c  chaincod.c  contour.c  detect.c  dft.c  getmin.c  globals.c  imgutil.c  init.c  isempty.c  line.c  link.c  log.c  loop.c  maps.c  matchpat.c  minutia.c  morph.c  mytime.c  quality.c  remove.c  results.c  ridges.c  shape.c  sort.c  util.c  xytreps.c
